stealth (2.11.04)

  * Fixed a compilation error with clang, reported by Nicolas
    Sevelin-Radiguet. 

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 22 Apr 2014 22:55:27 +0200

stealth (2.11.03)

  * In Stealth's man-page and manual -perm -xxxx was replaced by -perm /xxxx,
    as per the POSIX standard.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 15 Jun 2013 14:34:42 +0200

stealth (2.11.02)

  * Stealth returns 0 for options --help and --version

  * Catching Errno exceptions is replaced by catching std::exception
    exceptions 

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 25 Jan 2013 11:15:36 +0100

stealth (2.11.01)

  * Construction of ps and pdf versions of the stealth manual was accidenally
    dropped in releases after 2.10.00. The ps and pdf versions are now
    available again.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 23 Jan 2013 10:20:20 +0100

stealth (2.11.00)   

  * The policy file may contain a USE DIFFPREFIX specification specifying the
    number of characters the diff command adds to lines produced by, e.g.,
    CHECK commands.

  * Path locations in the output of program are by default recognized by the
    first forward-slash found in output lines. CHECK commands now also support
    a column offset specifying the offset where path locations start. This
    allows commands to write slashes before path specifications.

  * Filenames may contain blanks. A path specification in output of programs
    begins at the first forward slash or at the line offset defines with a
    CHECK command, and continues until the last non-blank character on lines.

  * Stealth now returns 0 when options --version and/or --help are specified.

  * Some icmake specific changes: CLASSES defines the class dependencies; and
    icmconf specifies #define USE_ALL "a"

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 20 Jan 2013 16:40:53 +0100

stealth (2.10.01)   

  * The following #defines in INSTALL.im can be overruled by defining