@@ -3,7 +3,10 @@ stealth (2.11.04)
   * Fixed a compilation error with clang, reported by Nicolas
     Sevelin-Radiguet. 
 
- -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 22 Apr 2014 22:55:27 +0200
+  * Removed superfluous patch-files 01_include_errno.patch and 
+    clang_FTBFS_ambiguous-declaration.patch
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 24 Apr 2014 16:20:24 +0200
 
 stealth (2.11.03)
 
